Improve message during recording

--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -449,7 +449,7 @@ stop.recording=Stop Recording
 recording.header=Record a sound
 before.recording=Tap to start recording
 before.overwrite.recording=Tap to start a new recording
-during.recording=Tap to stop recording
+during.recording=Recording is in progress, avoid navigating away from CommCare. Tap to stop recording
 after.recording=Recording complete.
 delete.recording=Tap to delete recording
 pause.recording=Recording paused, tap to continue recording
