--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -21,9 +21,11 @@
     <string name="ConnectPhoneAvailableURL">https://connectid.dimagi.com/users/phone_available</string>
     <string name="ConnectRecoverURL">https://connectid.dimagi.com/users/recover</string>
     <string name="ConnectRecoverSecondaryURL">https://connectid.dimagi.com/users/recover/secondary</string>
+    <string name="ConnectVerifySecondaryURL">https://connectid.dimagi.com/users/validate_secondary_phone</string>
     <string name="ConnectValidatePhoneURL">https://connectid.dimagi.com/users/validate_phone</string>
     <string name="ConnectRecoverConfirmOTPURL">https://connectid.dimagi.com/users/recover/confirm_otp</string>
     <string name="ConnectRecoverConfirmSecondaryOTPURL">https://connectid.dimagi.com/users/recover/confirm_secondary_otp</string>
+    <string name="ConnectVerifyConfirmSecondaryOTPURL">https://connectid.dimagi.com/users/confirm_secondary_otp</string>
     <string name="ConnectConfirmOTPURL">https://connectid.dimagi.com/users/confirm_otp</string>
     <string name="ConnectRegisterURL">https://connectid.dimagi.com/users/register</string>
 
@@ -492,6 +494,7 @@
     <string name="login_password_by_connect">Via ConnectID (or press here)</string>
     <string name="login_welcome_connect_signed_out">Unlock ConnectID first and then enter your app.</string>
     <string name="login_welcome_connect_signed_in">Welcome %s!</string>
+    <string name="login_connect_secondary_phone_message">Please confirm your secondary phone by %s to keep using ConnectID.</string>
 
     <string name="login_input_auto">AUTO</string>
 
@@ -499,7 +502,6 @@
     <string name="busy_message">We are still busy processing your previous request. Please try again in some time.</string>
 
     <string name="connect_button_logged_in">Go to Connect menu</string>
-    <string name="connect_button_logged_out">Unlock ConnectID</string>
 
     <string name="connect_consent_title">Consent</string>
     <string name="connect_consent_message_1">I have read and agree to Dimagi\'s <a href="https://www.dimagi.com/terms/latest/privacy/">Privacy Policy</a>, <a href="https://www.dimagi.com/terms/latest/tos/">Terms of Service</a>, <a href="https://www.dimagi.com/terms/latest/ba/">Business Agreement</a> and <a href="https://www.dimagi.com/terms/latest/aup/">Acceptable Use Policy</a>.</string>
@@ -569,7 +571,7 @@
     <string name="connect_recovery_button_extended">More Options</string>
 
     <string name="connect_recovery_alt_title">Alternate Phone</string>
-    <string name="connect_recovery_alt_message">On the next screen, we\'ll send a code via SMS to the alternate phone number associated with your account. Once verified, you can set a new password.</string>
+    <string name="connect_recovery_alt_message">On the next screen, we\'ll send a code via SMS to the alternate phone number associated with your account.</string>
     <string name="connect_recovery_alt_button">Continue</string>
 
     <string name="connect_recovery_success_title">Account Recovered</string>
