Several changes to Connect user experience. Showing Connect apps in front login page, user can login to them directly. Arrow button in jobs lists for jobs in progress now goes directly to learn/deliver app. Additional button now shown to take user to current job info page. Daily progress bar added to app home page when in delivery app (and job not finished yet). "View Job Status" button added to app home page for Connect apps.

--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -65,6 +65,7 @@ home.sync=Sync with Server
 home.unsent.forms.indicator=Unsent Forms: ${0}
 home.logout=Log out of CommCare
 home.report=Report an Issue
+home.connect=View Job Status
 # IMPORTANT: do NOT change the name of this key for any reason; HQ uses it for the training root menu
 training.root.title=Training
 
