Added remaining strings
Added remaining strings for French language support

--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -208,4 +208,63 @@ License.
     <string name="connect_results_payment_confirmed">Confirmé</string>
     <string name="connect_results_payment_not_confirmed">Non confirmé</string>
     <string name="connect_results_payment_date">Émis %s</string>
+
+
+    <string name="connect_last_update">Mis à jour: %s</string>
+    <string name="connect_job_none_training">Vous ne suivez aucune formation pour un emploi pour le moment</string>
+    <string name="connect_job_none_active">Vous n\'avez aucun emploi actif pour le moment</string>
+    <string name="connect_job_none_available">Il n\'y a aucune opportunité disponible pour le moment</string>
+    <string name="connect_job_training">Emplois pour lesquels je m\'entraîne</string>
+    <string name="connect_job_claimed">Emplois en livraison</string>
+    <string name="connect_job_ended">Emplois terminés</string>
+    <string name="connect_job_completed">Terminé %s</string>
+    <string name="connect_title">Connecter</string>
+    <string name="connect_job_new">NOUVELLE</string>
+    <string name="connect_job_training_complete">Apprentissage terminé &amp; Agréé</string>
+    <string name="connect_job_needs_assessment">Évaluation requise</string>
+    <string name="connect_job_passed_assessment">Évaluation terminée</string>
+    <string name="connect_job_training_progress">%s %d%% Complète</string>
+    <string name="connect_job_visits_completed">Complété %d visites</string>
+    <string name="connect_job_remaining">%d Jours restant%s</string>
+    <string name="connect_job_remaining_from"> depuis %s</string>
+    <string name="connect_job_learning">Apprentissage</string>
+    <string name="connect_job_learning_not_completed">Apprentissage non terminé</string>
+    <string name="connect_job_assessment_not_completed">Évaluation non terminée</string>
+    <string name="connect_job">Emploi</string>
+    <string name="connect_learn_complete">Complète</string>
+    <string name="connect_learn_complete_title">Formation terminée !</string>
+    <string name="connect_learn_need_assessment_title">Formation en attente</string>
+    <string name="connect_learn_failed_title">Échec de la formation</string>
+    <string name="connect_learn_status">Vous avez terminé %d de %d cours.\nTerminez votre apprentissage pour obtenir votre certificat.</string>
+    <string name="connect_learn_finished">Vous avez obtenu un certificat pour cet emploi et êtes éligible pour réclamer l\'emploi et commencer à prodiguer des soins..\nTon score: %d\nNote de passage: %d</string>
+    <string name="connect_learn_need_assessment">Complétez l’évaluation pour terminer la formation.</string>
+    <string name="connect_learn_failed">Désolé, vous n\'avez pas obtenu la note de passage à votre évaluation. Veuillez réessayer.\nTon score: %d\nNote de passage: %d</string>
+    <string name="connect_learn_certificate">CERTIFICAT D\'ACHÈVEMENT</string>
+    <string name="connect_learn_completed">Terminé le: %s</string>
+    <string name="connect_learn_claim_label">Réclamez un emploi pour prodiguer des soins</string>
+    <string name="connect_learn_warning_ended">Le travail est terminé. Vous ne gagnerez aucun progrès pour un travail supplémentaire.</string>
+    <string name="connect_learn_review">Révision de l\'apprentissage</string>
+    <string name="connect_learn_view_details">Afficher les détails du travail</string>
+    <string name="connect_learn_go_to_assessment">Aller à l\'évaluation</string>
+    <string name="connect_learn_try_again">Essayer à nouveau</string>
+    <string name="connect_learn_continue">Continuer l\'apprentissage</string>
+    <string name="connect_progress_begin_date">Le projet commence %s\nLivraison complète par %s</string>
+    <string name="connect_progress_ended">Travail terminé %s</string>
+    <string name="connect_progress_expired_dialog_title">Projet expiré</string>
+    <string name="connect_progress_max_visits_dialog_title">Nombre maximal de visites atteint</string>
+    <string name="connect_progress_expired">La dernière date du projet est terminée et les visites ne compteront pas dans le paiement.</string>
+    <string name="connect_progress_visits_completed">Vous avez atteint le nombre maximum de visites, les visites supplémentaires ne compteront pas dans le paiement.</string>
+    <string name="connect_progress_review">Révision de l\'apprentissage</string>
+    <string name="connect_progress_launch">Démarrer l\'application</string>
+    <string name="connect_progress_paid">PAYÉ</string>
+    <string name="connect_progress_warning_ended">Le travail est terminé. Vous ne gagnerez aucun progrès pour un travail supplémentaire.</string>
+    <string name="connect_progress_warning_not_started">Le travail n\'a pas encore commencé. Vous ne gagnerez aucun progrès pour le travail.</string>
+    <string name="connect_progress_warning_max_reached_single">Vous avez effectué le nombre maximum de visites. Vous ne gagnerez aucun progrès pour un travail supplémentaire.</string>
+    <string name="connect_progress_warning_daily_max_reached_single">Vous avez atteint le nombre maximum de visites pour aujourd\'hui. Vous ne gagnerez aucun progrès pour un travail supplémentaire.</string>
+    <string name="connect_progress_warning_max_reached_multi">Vous avez atteint le nombre maximum de visites pour %s.</string>
+    <string name="connect_progress_warning_daily_max_reached_multi">Vous avez atteint votre limite quotidienne pour %s.</string>
+    <string name="connect_job_no_learning_required">Aucun apprentissage requis</string>
+    <string name="connect_job_go_to_learn_app">Accédez à l\'application Apprendre</string>
+    <string name="connect_button_logged_in">Allez dans le menu Connecter</string>
+    <string name="connect_db_corrupt">Un problème est survenu avec la base de données, veuillez récupérer votre compte.</string>
 </resources>
