-suspended user ui design

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -792,4 +792,6 @@
     <string name="phone_code_plus">+</string>
     <string name="audio_recording_notification">Audio Recording Notification</string>
     <string name="connect_home_progress_today">Today\'s Visits: %d</string>
+    <string name="suspended">Suspended</string>
+    <string name="user_suspended">User is Suspended. Please contact admin.</string>
 </resources>
