--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -267,4 +267,5 @@ License.
     <string name="connect_job_go_to_learn_app">Accédez à l\'application Apprendre</string>
     <string name="connect_button_logged_in">Allez dans le menu Connecter</string>
     <string name="connect_db_corrupt">Un problème est survenu avec la base de données, veuillez récupérer votre compte.</string>
+    <string name="connect_job_list_api_failure">Une erreur s\'est produite lors de la connexion au serveur.</string>
 </resources>
