--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -797,4 +797,6 @@
     <string name="user_suspended">User is Suspended. Please contact admin.</string>
     <string name="select_phone_number">Select Phone Number</string>
     <string name="connect_job_list_api_failure">An error occurred while connecting to the server.</string>
+    <string name="connect_payment_acknowledge_notification_yes">Yes</string>
+    <string name="connect_payment_acknowledge_notification_no">No</string>
 </resources>
